# IIT-Hyderabad-Courses

./: README.md
Algorithms_assignments/assignment_1/: q_1.cpp
Compiler-Engineering/: Asgn0_CS17BTECH11034.aux  Asgn0_CS17BTECH11034.out  Asgn0_CS17BTECH11034.tex  Asgn0_CS17BTECH11034.toc
Compiler-Engineering/Assignment-0/: Asgn0_CS17BTECH11034.tex
Compiler-Engineering/Assignment-1/: Asgn1_CS17BTECH11034.bzip2  CMakeLists.txt
Compiler-Engineering/Assignment-1/Asgn1_CS17BTECH11034/: readme  readme.txt  variable-footprint-pass.cpp
Compiler-Engineering/Assignment-1/Asgn1_CS17BTECH11034/testFiles/: helloWorld.c  manyVariables.c  pointerTest.c  scopes.cpp  singleLoop.c
Compiler-Engineering/Assignment-1/Footprint/: CMakeLists.txt  variable-footprint-pass.cpp
Compiler-Engineering/Assignment-1/variable-footprint/: CMakeLists.txt  variable-footprint-pass.cpp
Compiler-Engineering/Assignment-2/: README  loopRev.cpp
Compiler-Engineering/Code-Compliance-Checker/: CMakeLists.txt  FloatCmp.cpp  readme.txt
Compilers/: a.out  cpp-scope-test  cpp-scope-test.cpp  hw.c
Compilers-II/: MiniAsn1_CS17BTECH11034.aux  MiniAsn1_CS17BTECH11034.out  MiniAsn1_CS17BTECH11034.tex  MiniAsn1_CS17BTECH11034.toc
Introduction_to_AI_and_ML/: 1.py  2.py  geo2d.py
Linear-Optimisations/: README  example.txt  infeasible.txt  inp.py  inp1.txt  simplex.py
OSExam/: BA  BA.cpp  CME-log.txt  PC  getRandTest  getRandTest.cpp  graphClass.eps  graph_gen.py  report.aux  report.out  report.tex  report.toc  template.out
OS_II_Assignments/: testDriver.cpp
utilities/: adjacencyListGen.py
(+486 files in other folders)
